--- a/src/main/resources/views/dbWork.fxml
+++ b/src/main/resources/views/dbWork.fxml
@@ -1,18 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DBWorkController">
+<AnchorPane prefHeight="500.0" prefWidth="900.0" styleClass="window_background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DBWorkController">
    <children>
-      <TableView fx:id="fuelTable" layoutX="14.0" layoutY="20.0" prefHeight="318.0" prefWidth="321.0">
+      <TableView fx:id="fuelTable" blendMode="MULTIPLY" layoutX="14.0" layoutY="20.0" prefHeight="318.0" prefWidth="321.0">
         <columns>
           <TableColumn fx:id="columnName" prefWidth="155.0" text="Вид топлива" />
           <TableColumn fx:id="columnPrice" prefWidth="165.0" text="Цена (рублей за литр)" />
         </columns>
       </TableView>
-      <Button layoutX="14.0" layoutY="373.0" mnemonicParsing="false" onAction="#addFuel" prefHeight="58.0" prefWidth="89.0" text="Добавить" />
-      <Button layoutX="130.0" layoutY="373.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="89.0" text="Изменить" />
-      <Button layoutX="246.0" layoutY="373.0" mnemonicParsing="false" onAction="#removeFuel" prefHeight="58.0" prefWidth="89.0" text="Удалить" />
+      <Button layoutX="75.0" layoutY="357.0" mnemonicParsing="false" onAction="#addFuel" prefHeight="58.0" prefWidth="89.0" text="Добавить">
+         <styleClass>
+            <String fx:value="button_restyling" />
+            <String fx:value="button_restyling_bounds" />
+         </styleClass></Button>
+      <Button layoutX="75.0" layoutY="402.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="89.0" text="Изменить">
+         <styleClass>
+            <String fx:value="button_restyling" />
+            <String fx:value="button_restyling_bounds" />
+         </styleClass></Button>
+      <Button layoutX="75.0" layoutY="446.0" mnemonicParsing="false" onAction="#removeFuel" prefHeight="58.0" prefWidth="89.0" text="Удалить">
+         <styleClass>
+            <String fx:value="button_restyling" />
+            <String fx:value="button_restyling_bounds" />
+         </styleClass></Button>
+      <Button fx:id="closeButton" layoutX="232.0" layoutY="24.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
+         <font>
+            <Font size="6.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
