--- a/src/main/resources/views/fuelParametersAdd.fxml
+++ b/src/main/resources/views/fuelParametersAdd.fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="166.0" prefWidth="263.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddFuelController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="155.0" prefWidth="228.0" styleClass="window_background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddFuelController">
    <children>
-      <Button layoutX="12.0" layoutY="111.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="239.0" text="Добавить" onAction="#add"/>
-      <TextField fx:id="name" layoutX="14.0" layoutY="22.0" prefHeight="41.0" prefWidth="239.0" />
-      <TextField fx:id="price" layoutX="14.0" layoutY="67.0" prefHeight="41.0" prefWidth="239.0" />
+      <Button layoutX="14.0" layoutY="108.0" mnemonicParsing="false" onAction="#add" prefHeight="41.0" prefWidth="239.0" stylesheets="@../styles.css" text="Добавить">
+         <styleClass>
+            <String fx:value="button_restyling" />
+            <String fx:value="button_restyling_bounds" />
+         </styleClass></Button>
+      <TextField fx:id="name" blendMode="MULTIPLY" layoutX="14.0" layoutY="31.0" prefHeight="41.0" prefWidth="239.0" styleClass="button_restyling_bounds" stylesheets="@../styles.css" />
+      <TextField fx:id="price" blendMode="MULTIPLY" layoutX="14.0" layoutY="70.0" prefHeight="41.0" prefWidth="239.0" styleClass="button_restyling_bounds" stylesheets="@../styles.css" />
+      <Button fx:id="closeButton" layoutX="232.0" layoutY="24.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
+         <font>
+            <Font size="6.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
