--- a/src/main/resources/views/systemInfo.fxml
+++ b/src/main/resources/views/systemInfo.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -14,12 +15,17 @@
     <rowConstraints>
         <RowConstraints />
     </rowConstraints>
-    <AnchorPane prefHeight="275.0" prefWidth="384.0">
+    <AnchorPane prefHeight="275.0" prefWidth="384.0" styleClass="window_background" stylesheets="@../styles.css">
       <children>
-         <TextArea editable="false" layoutX="13.0" layoutY="19.0" prefHeight="241.0" prefWidth="359.0" styleClass="text" stylesheets="@../styles.css" text="Сведения всякие...">
+         <TextArea blendMode="MULTIPLY" editable="false" layoutX="13.0" layoutY="33.0" prefHeight="227.0" prefWidth="359.0" styleClass="text" stylesheets="@../styles.css" text="Сведения всякие...">
             <font>
                <Font size="29.0" />
             </font>
          </TextArea>
+         <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
+            <font>
+               <Font size="6.0" />
+            </font>
+         </Button>
       </children></AnchorPane>
 </GridPane>
