--- a/src/main/resources/views/imitation.fxml
+++ b/src/main/resources/views/imitation.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="1000.0" styleClass="window_background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="1000.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="14.0" layoutY="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-image: &quot;@pics/icons8-play-48.png&quot;;" stylesheets="@../styles.css" wrapText="true">
+      <Button layoutX="14.0" layoutY="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-image: &quot;@pics/icons8-play-48.png&quot;;" stylesheets="@../styles/styles.css" wrapText="true">
          <font>
             <Font size="24.0" />
          </font>
@@ -19,7 +19,7 @@
             <String fx:value="button_play" />
          </styleClass>
       </Button>
-      <Button layoutX="84.0" layoutY="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles.css" wrapText="true">
+      <Button layoutX="84.0" layoutY="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles/styles.css" wrapText="true">
          <font>
             <Font size="16.0" />
          </font>
@@ -28,7 +28,7 @@
             <String fx:value="button_pause" />
          </styleClass>
       </Button>
-      <Button layoutX="154.0" layoutY="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles.css" wrapText="true">
+      <Button layoutX="154.0" layoutY="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles/styles.css" wrapText="true">
          <font>
             <Font name="Arial" size="26.0" />
          </font>
@@ -37,7 +37,7 @@
             <String fx:value="button_stop" />
          </styleClass>
       </Button>
-      <Button layoutX="10.0" layoutY="387.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В конструктор" wrapText="true">
+      <Button layoutX="10.0" layoutY="387.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В конструктор" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
@@ -46,7 +46,7 @@
             <String fx:value="button_restyling_bounds" />
          </styleClass>
       </Button>
-      <Button layoutX="10.0" layoutY="425.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В моделирование" wrapText="true">
+      <Button layoutX="10.0" layoutY="425.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В моделирование" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
@@ -55,7 +55,7 @@
             <String fx:value="button_restyling_bounds" />
          </styleClass>
       </Button>
-      <Button layoutX="10.0" layoutY="463.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles.css" text="В меню" wrapText="true">
+      <Button layoutX="10.0" layoutY="463.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В меню" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
@@ -66,48 +66,48 @@
       </Button>
       <Line endX="-47.0" endY="310.0" layoutX="267.0" layoutY="190.0" startX="-47.0" startY="-190.0" />
       <Line endX="86.0" endY="315.0" layoutX="736.0" layoutY="186.0" startX="86.0" startY="-186.0" />
-      <Label layoutX="834.0" layoutY="35.0" styleClass="text" stylesheets="@../styles.css" text="Информационное табло">
+      <Label layoutX="834.0" layoutY="35.0" styleClass="text" stylesheets="@../styles/styles.css" text="Информационное табло">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
       <TextArea fx:id="log_list" blendMode="MULTIPLY" disable="true" editable="false" layoutX="823.0" layoutY="62.0" prefHeight="317.0" prefWidth="177.0" />
-      <Label layoutX="875.0" layoutY="393.0" styleClass="text" stylesheets="@../styles.css" text="Статистика">
+      <Label layoutX="875.0" layoutY="393.0" styleClass="text" stylesheets="@../styles/styles.css" text="Статистика">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Label layoutX="834.0" layoutY="431.0" styleClass="text" stylesheets="@../styles.css" text="Заправлено авто:">
+      <Label layoutX="834.0" layoutY="431.0" styleClass="text" stylesheets="@../styles/styles.css" text="Заправлено авто:">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Label layoutX="834.0" layoutY="462.0" styleClass="text" stylesheets="@../styles.css" text="Всего залито:">
+      <Label layoutX="834.0" layoutY="462.0" styleClass="text" stylesheets="@../styles/styles.css" text="Всего залито:">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Label layoutX="834.0" layoutY="412.0" styleClass="text" stylesheets="@../styles.css" text="Касса:">
+      <Label layoutX="834.0" layoutY="412.0" styleClass="text" stylesheets="@../styles/styles.css" text="Касса:">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Label fx:id="cash_value_label" layoutX="969.0" layoutY="412.0" styleClass="text" stylesheets="@../styles.css" text="0">
+      <Label fx:id="cash_value_label" layoutX="969.0" layoutY="412.0" styleClass="text" stylesheets="@../styles/styles.css" text="0">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Label fx:id="automobileCountLabel" layoutX="969.0" layoutY="431.0" styleClass="text" stylesheets="@../styles.css" text="0">
+      <Label fx:id="automobileCountLabel" layoutX="969.0" layoutY="431.0" styleClass="text" stylesheets="@../styles/styles.css" text="0">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Label fx:id="fuelValueLabel" layoutX="969.0" layoutY="462.0" styleClass="text" stylesheets="@../styles.css" text="0">
+      <Label fx:id="fuelValueLabel" layoutX="969.0" layoutY="462.0" styleClass="text" stylesheets="@../styles/styles.css" text="0">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Button fx:id="closeButton" layoutX="232.0" layoutY="24.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
+      <Button fx:id="closeButton" layoutX="232.0" layoutY="24.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
          <font>
             <Font size="6.0" />
          </font>
